--- a/Win/LiteGlowPiPL.rc
+++ b/Win/LiteGlowPiPL.rc
@@ -22,8 +22,8 @@ BEGIN
 	"MIB8",
 	"gtac", 
 	0, 0x0,
-	16, 0x0,
-	"\x0FSample Plug-ins", 
+	12, 0x0,
+	"\x08LiteGlow\0\0\0", 
 
 	"MIB8",
 	"4668", 
@@ -47,7 +47,7 @@ BEGIN
 	0x65564552L, 
 	0L,
 	4L
-	557057L, 
+	65538L, 
 
 	"MIB8",
 	0x65494E46L, 
@@ -59,13 +59,13 @@ BEGIN
 	"OLGe", 
 	0L,
 	4L,
-	33554432L, 
+	100664320L, 
 
 	"MIB8",
 	"2LGe", 
 	0L,
 	4L,
-	0L, 
+	134217728L, 
 
 	"MIB8",
 	"ANMe",
