--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -356,6 +356,7 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
     <ClInclude Include="..\..\..\Headers\AE_PluginData.h" />
     <ClInclude Include="..\LiteGlow.h" />
     <ClInclude Include="..\LiteGlowGPU.h" />
+    <ClInclude Include="..\LiteGlowGPU_Impl.h" />
     <ClInclude Include="..\LiteGlow_Algorithms\LiteGlowFFT.h" />
     <ClInclude Include="..\LiteGlow_Strings.h" />
     <ClInclude Include="..\..\..\Headers\A.h" />
@@ -382,6 +383,7 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
     <ClCompile Include="..\..\..\Util\MissingSuiteError.cpp" />
     <ClCompile Include="..\LiteGlow.cpp" />
     <ClCompile Include="..\LiteGlowGPU.cpp" />
+    <ClCompile Include="..\LiteGlowGPU_Impl.cpp" />
     <ClCompile Include="..\LiteGlow_Algorithms\LiteGlowFFT.cpp" />
     <ClCompile Include="..\LiteGlow_Strings.cpp" />
   </ItemGroup>
