--- a/Win/LiteGlow.vcxproj.filters
+++ b/Win/LiteGlow.vcxproj.filters
@@ -90,6 +90,7 @@
     <ClInclude Include="..\LiteGlow_Algorithms\LiteGlowFFT.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="..\LiteGlowGPU_Impl.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Util\AEGP_SuiteHandler.cpp">
@@ -102,6 +103,7 @@
     <ClCompile Include="..\LiteGlow_Strings.cpp" />
     <ClCompile Include="..\LiteGlowGPU.cpp" />
     <ClCompile Include="..\LiteGlow_Algorithms\LiteGlowFFT.cpp" />
+    <ClCompile Include="..\LiteGlowGPU_Impl.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="..\LiteGlowPiPL.r">
