Refactor LiteGlow versioning: centralize version constants
- Replaced individual version macros with a single include for LiteGlow_Version.h.
- Updated version assignment in LiteGlow.cpp and LiteGlowPiPL.r to use LITEGLOW_VERSION for consistency.
- Improved maintainability by consolidating version information in one header file.

--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -386,6 +386,7 @@ if not exist "$(OutDir)\DirectX_Assets" mkdir "$(OutDir)\DirectX_Assets"
   <ItemGroup>
     <ClInclude Include="..\..\..\Headers\AE_PluginData.h" />
     <ClInclude Include="..\LiteGlow.h" />
+    <ClInclude Include="..\LiteGlow_Version.h" />
     <ClInclude Include="..\..\..\Headers\A.h" />
     <ClInclude Include="..\..\..\Headers\AE_Effect.h" />
     <ClInclude Include="..\..\..\Headers\AE_EffectCB.h" />
