--- a/Win/LiteGlowPiPL.rc
+++ b/Win/LiteGlowPiPL.rc
@@ -22,8 +22,8 @@ BEGIN
 	"MIB8",
 	"gtac", 
 	0, 0x0,
-	12, 0x0,
-	"\x08LiteGlow\0\0\0", 
+	16, 0x0,
+	"\x0D361do_plugins\0\0", 
 
 	"MIB8",
 	"4668", 
@@ -41,13 +41,13 @@ BEGIN
 	"RVSe", 
 	0, 0x0,
 	4, 0x0,
-	13, 28,
+	13, 29,
 
 	"MIB8",
 	0x65564552L, 
 	0L,
 	4L
-	524289L, 
+	528385L, 
 
 	"MIB8",
 	0x65494E46L, 
@@ -65,13 +65,13 @@ BEGIN
 	"2LGe", 
 	0L,
 	4L,
-	134217728L, 
+	704648192L, 
 
 	"MIB8",
 	"ANMe",
 	0, 0x0,
 	16, 0x0,
-	"\x0DADBE LiteGlow\0\0", 
+	"\x0E361do LiteGlow\0", 
 
 	"MIB8",
 	0x6165464CL, 
@@ -82,8 +82,8 @@ BEGIN
 	"MIB8",
 	"LRUe",
 	0, 0x0,
-	24, 0x0,
-	"\x15https://www.adobe.com\0\0", 
+	44, 0x0,
+	"\x28https://github.com/rebuildup/Ae_LiteGlow\0\0\0", 
 
 
 END
