--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -387,8 +387,9 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
     <ItemGroup>
       <ClCompile Include="..\..\..\Util\AEGP_SuiteHandler.cpp" />
       <ClCompile Include="..\..\..\Util\DirectXUtils.cpp" />
-      <ClCompile Include="..\..\..\Util\Smart_Utils.cpp" />
-      <ClCompile Include="..\..\..\Util\MissingSuiteError.cpp" />
+    <ClCompile Include="..\..\..\Util\Smart_Utils.cpp" />
+    <ClCompile Include="..\..\..\Util\MissingSuiteError.cpp" />
+    <ClCompile Include="..\..\..\Util\AEFX_SuiteHelper.c" />
     <ClCompile Include="..\LiteGlow.cpp" />
     <ClCompile Include="..\LiteGlow_Strings.cpp" />
   </ItemGroup>
