--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -108,7 +108,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>../build/include;..\..\..\Headers;..\..\..\Headers\SP;..\..\..\Headers\Win;..\..\..\Resources;..\..\..\Util;..\..\..\GPUUtils;$(BOOST_BASE_PATH)\;$(CUDA_SDK_BASE_PATH)\include\;$(IntDir)PreprocessedOpenCL;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>MSWindows;WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MSWindows;WIN32;_DEBUG;_WINDOWS;HAS_HLSL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <StructMemberAlignment>Default</StructMemberAlignment>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
@@ -183,7 +183,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <CompileAs>Default</CompileAs>
-      <PreprocessorDefinitions>MSWindows;WIN32;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>MSWindows;WIN32;_WINDOWS;HAS_HLSL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
@@ -359,6 +359,39 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="LiteGlowPiPL.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="..\LiteGlow_Kernel.chlsl">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">rem Correct compilation is dependent on DXC being installed correctly, from the DirectX Shader Compiler
+del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
+if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
+"cl.exe" /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" /TP /P "%(FullPath)"
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurHKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurVKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurVKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlendKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlendKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">rem Correct compilation is dependent on DXC being installed correctly, from the DirectX Shader Compiler
+del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
+if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
+"cl.exe" /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" /TP /P "%(FullPath)"
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurHKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurVKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurVKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+python "..\..\..\GPUUtils\ParseHLSL.py" -i "$(ProjectDir)LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlendKernel
+"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlendKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing HLSL to CSO/RS for LiteGlow_Kernel.chlsl</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing HLSL to CSO/RS for LiteGlow_Kernel.chlsl</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)LiteGlow_Kernel.i;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">$(ProjectDir)LiteGlow_Kernel.i;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Headers\AE_PluginData.h" />
