--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -367,7 +367,7 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
 del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
 if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
 echo HLSL preprocess: ..\\LiteGlow_Kernel.chlsl
-if not exist "..\\LiteGlow_Kernel.chlsl" (echo Missing ..\\LiteGlow_Kernel.chlsl & exit /b 3)
+if not exist "..\\LiteGlow_Kernel.chlsl" (echo Missing ..\\LiteGlow_Kernel.chlsl &amp; exit /b 3)
 call cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /P /TP /Tp "..\LiteGlow_Kernel.chlsl" /Fi"..\LiteGlow_Kernel.i"
 if errorlevel 1 exit /b %errorlevel%
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
@@ -382,7 +382,7 @@ python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir).
 del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
 if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
 echo HLSL preprocess: ..\\LiteGlow_Kernel.chlsl
-if not exist "..\\LiteGlow_Kernel.chlsl" (echo Missing ..\\LiteGlow_Kernel.chlsl & exit /b 3)
+if not exist "..\\LiteGlow_Kernel.chlsl" (echo Missing ..\\LiteGlow_Kernel.chlsl &amp; exit /b 3)
 call cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /P /TP /Tp "..\LiteGlow_Kernel.chlsl" /Fi"..\LiteGlow_Kernel.i"
 if errorlevel 1 exit /b %errorlevel%
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
