--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -366,9 +366,10 @@ cl /D "MSWindows" /EP $(IntDir)%(Filename).rrc &gt;               "$(ProjectDir)
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">rem Correct compilation is dependent on DXC being installed correctly, from the DirectX Shader Compiler
 del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
 if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
-del /Q "$(IntDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
-echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(IntDir)LiteGlow_Kernel_wrapper.cpp"
-cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P "$(IntDir)LiteGlow_Kernel_wrapper.cpp" /Fi"..\LiteGlow_Kernel.i"
+del /Q "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
+echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
+echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
+cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" /Fi"..\LiteGlow_Kernel.i"
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
 "$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
@@ -380,9 +381,10 @@ python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir).
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">rem Correct compilation is dependent on DXC being installed correctly, from the DirectX Shader Compiler
 del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
 if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
-del /Q "$(IntDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
-echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(IntDir)LiteGlow_Kernel_wrapper.cpp"
-cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P "$(IntDir)LiteGlow_Kernel_wrapper.cpp" /Fi"..\LiteGlow_Kernel.i"
+del /Q "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
+echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
+echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
+cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" /Fi"..\LiteGlow_Kernel.i"
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
 "$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
