--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -370,7 +370,7 @@ del /Q "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
 echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 if not exist "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" (echo Missing wrapper &amp; exit /b 3)
-cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
+cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)." /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
 "$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
@@ -386,7 +386,7 @@ del /Q "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" 2&gt; nul
 echo #include "..\LiteGlow_Kernel.chlsl" &gt; "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 if not exist "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" (echo Missing wrapper &amp; exit /b 3)
-cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)" /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
+cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"..\..\..\GPUUtils" -I"$(ProjectDir)." /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
 "$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
 python "..\..\..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
