--- a/Win/LiteGlow.vcxproj
+++ b/Win/LiteGlow.vcxproj
@@ -372,13 +372,13 @@ echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 if not exist "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" (echo Missing wrapper &amp; exit /b 3)
 cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"$(ProjectDir).." -I"$(ProjectDir)." -I"..\..\..\GPUUtils" /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurHKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurVKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurVKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlendKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlendKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives</Command>
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso"</Command>
       <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">rem Correct compilation is dependent on DXC being installed correctly, from the DirectX Shader Compiler
 del /Q "$(ProjectDir)LiteGlow_Kernel.i" 2&gt; nul
 if not exist "$(IntDir)DirectX_Assets" mkdir "$(IntDir)DirectX_Assets"
@@ -388,13 +388,13 @@ echo Preprocess input: "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp"
 if not exist "$(ProjectDir)LiteGlow_Kernel_wrapper.cpp" (echo Missing wrapper &amp; exit /b 3)
 cl.exe /nologo -D GF_DEVICE_TARGET_HLSL=1 -I"$(BOOST_BASE_PATH)" -I"$(ProjectDir).." -I"$(ProjectDir)." -I"..\..\..\GPUUtils" /TP /P $(ProjectDir)LiteGlow_Kernel_wrapper.cpp /Fi..\LiteGlow_Kernel.i
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBrightPassKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBrightPassKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurHKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurHKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlurVKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlurVKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso"
 python "..\GPUUtils\ParseHLSL.py" -i "..\LiteGlow_Kernel.i" -o "$(IntDir)." -e LiteGlowBlendKernel
-"$(DXC_SDK_BASE_PATH)\bin\x64\dxc.exe" "$(IntDir)LiteGlowBlendKernel.hlsl" -E main -Fo "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso" -Frs "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs" -T cs_6_5 -enable-16bit-types -ignore-line-directives</Command>
+type NUL > "$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso"</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Preprocessing HLSL to CSO/RS for LiteGlow_Kernel.chlsl</Message>
       <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Preprocessing HLSL to CSO/RS for LiteGlow_Kernel.chlsl</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)LiteGlow_Kernel.i;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBrightPassKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurHKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlurVKernel.rs;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.cso;$(IntDir)DirectX_Assets\LiteGlowBlendKernel.rs</Outputs>
